2004-10-28  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (drag_data_received): fix the popup id.

	* e-msg-composer-attachment-bar.c (emcab_popup): added popup doco.

2004-10-27  Jeffrey Stedfast  <fejj@ximian.com>

	* e-msg-composer.c (composer_key_pressed): Close on Esc.
	(create_composer): Connect to the key-press-event signal.

2004-10-26  mengjie yu  <meng-jie.yu@sun.com>
	
	fix for bugzilla #44876

	* e-msg-composer-hdrs.c (header_new_recipient, create_headers):
	add access key for Reply_to, From, Subject, To, Cc, Bcc, Post_to

	* e-msg-composer.c (setup_signatures_menu): Add accesss key for
	Signature.

2004-10-19  JP Rosevear  <jpr@novell.com>

	* e-msg-composer.c, e-msg-composer-attachment-bar.c: convert to
	org.gnome hook names

2004-10-08  Jeffrey Stedfast  <fejj@novell.com>

	* e-msg-composer.c (build_message): g_strdup() the gpg/smime keys
	into the recipients list or else we end up free'ing them later
	when we shouldn't. Fixes bug #66703

2004-10-06  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (drag_data_received): 
	* e-msg-composer-attachment-bar.c (emcab_popup): e-popup api changes.

2004-10-01  JP Rosevear  <jpr@novell.com>

	* e-msg-composer.c: uses GTKHTML_API_VERSION for the bonobo server
	look up

2004-10-01  Not Zed  <NotZed@Ximian.com>

	* e-msg-composer.c (create_composer): enable ask drop action and
	hook onto drag motion.
	(drag_motion): implement.
	(drop_action): do the work here now.
	(drag_data_received): popup a menu if the action is ask.
	(drop_popup_copy, drop_popup_move, drop_popup_cancel):
	(drop_popup_free): Popup callbacks.

2004-09-30  Kjartan Maraas  <kmaraas@gnome.org>

	* e-msg-composer.c: (autosave_manager_start),
	(autosave_manager_stop), (create_composer): Use non-deprecated
	functions.

2004-08-17  Michael Meeks  <michael@ximian.com>

	* e-msg-composer.c (handle_mailto): handle 'attachment' as
	well, as per Mozilla's mangling, and the new desktop-launch spec.