@@ -1,3 +1,8 @@
+2004-11-15  Not Zed  <NotZed@Ximian.com>
+
+	* e-msg-composer.c (handle_multipart_encrypted): remove the old
+	camel_multipart_encrypted api.
+
 2004-10-28  Not Zed  <NotZed@Ximian.com>
 
 	* e-msg-composer.c (drag_data_received): fix the popup id.
